--- a/service.html
+++ b/service.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Service &#8211; Vanlife</title>
+    <title>Service's &#8211; AIM</title>
     <meta name='robots' content='max-image-preview:large' />
     <link rel="alternate" type="application/rss+xml" title="Vanlife &raquo; Feed" href="https://audin.creedcreatives.net/vanlife/feed/" />
     <link rel="alternate" type="application/rss+xml" title="Vanlife &raquo; Comments Feed" href="https://audin.creedcreatives.net/vanlife/comments/feed/" />
